# pyDGTGTD

./: .coverage  .gitignore  AUTHORS  CONVERSION_SUMMARY.md  COPYING  ChangeLog  DATA_PRIVACY.md  MIGRATION.md  PERFORMANCE_OPTIMIZATIONS.md  QUICKSTART.md  README.md  RUNTIME_FIXES.md  START_HERE.md  TESTING.md  check_contexts.py  check_db.py  check_folders.py  comprehensive_test_data.json  funny_test_data.json  input.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_program.bat  run_tests.bat  run_tests.py  run_tests.sh  setup.cfg  setup.py  setup_venv.bat  setup_venv.py  setup_venv.sh  test_import.py  test_import_data.json  test_import_debug.py  wxgtd.pyw  wxgtd_cli.py  wxgtd_dbg.py
data/: wxgtd.xrc
tests/: README.md  __init__.py  conftest.py  test_datetimeutils.py  test_dbsync.py  test_dicts_logic.py  test_filtertreemodel.py  test_fmt.py  test_loader.py  test_model_enums.py  test_model_objects.py  test_notebook_logic.py  test_projectlist.py  test_queries.py  test_quicktask_logic.py  test_task_logic.py  test_validators.py
wxgtd/: __init__.py  cli.py  configuration.py  main.py  version.py
wxgtd/gui/: __init__.py  _base_dialog.py  _base_frame.py  _base_task_frame.py  _dict_base_dlg.py  _filtertreectrl.py  _infobox.py  _projectlistpanel.py  _taskbaricon.py  _tasklistctrl.py  dialogs.py  dlg_about.py  dlg_contexts.py  dlg_datetime.py  dlg_dropbox_auth.py  dlg_export_tasks.py  dlg_folders.py  dlg_goals.py  dlg_notebook_page.py  dlg_preferences.py  dlg_projects_tree.py  dlg_remind_settings.py  dlg_repeat_settings.py  dlg_select_tags.py  dlg_show_settings.py  dlg_sync_progress.py  dlg_tags.py  dlg_trash.py  frame_checklistitem.py  frame_main.py  frame_notebooks.py  frame_reminders.py  frame_search.py  frame_task.py  message_boxes.py  notebook_controller.py  quicktask.py  splash.py  task_controller.py
wxgtd/lib/: __init__.py  appconfig.py  datetimeutils.py  fmt.py  locales.py  logging_setup.py  singleton.py
wxgtd/logic/: __init__.py  dicts.py  notebook.py  quicktask.py  task.py  task_test.py
wxgtd/model/: __init__.py  db.py  dbsync.py  enums.py  exporter.py  loader.py  objects.py  queries.py  sqls.py  sync.py
wxgtd/wxtools/: __init__.py  iconprovider.py  ipc.py  wxpub.py  wxresources.py  wxshell.py  wxutils.py
(+9 files in other folders)
