[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wxgtd"
version = "0.12.9"
description = "wxGTD - GTD (Getting Things Done) application for wxPython"
authors = [
    {name = "Karol Będkowski", email = "karol.bedkowski@gmail.com"}
]
readme = "README"
license = {text = "GPL-2.0-or-later"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]
dependencies = [
    "wxPython>=4.0.0",
    "sqlalchemy>=1.4.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
wxgtd = "wxgtd.main:run"
wxgtd-cli = "wxgtd.cli:main"

[tool.setuptools]
packages = ["wxgtd", "wxgtd.gui", "wxgtd.lib", "wxgtd.logic", "wxgtd.model", "wxgtd.wxtools"]
include-package-data = true

[tool.setuptools.package-data]
wxgtd = ["../data/*", "../locale/*/LC_MESSAGES/*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
