[metadata]
name = wxgtd
version = 0.12.9
author = Karol Będkowski
author_email = karol.bedkowski@gmail.com
description = wxGTD - GTD (Getting Things Done) application
long_description = file: README
long_description_content_type = text/plain
license = GPL-2.0-or-later

[options]
packages = find:
python_requires = >=3.8
install_requires =
    wxPython>=4.0.0
    sqlalchemy>=1.4.0,<2.0.0
include_package_data = True

[options.entry_points]
console_scripts =
    wxgtd-cli = wxgtd.cli:main

gui_scripts =
    wxgtd = wxgtd.main:run
